# promptly_exercise

./: .pylintrc  pyproject.toml
promptly_exersice/: dataframe_formatter.py  dataframe_transformer.py  utils.py
promptly_exersice/entities/: questionary_answer.py  questionnaire_result.py
promptly_exersice/handlers/: questionary_answer_handler.py  questionnaire_result_handler.py
resources/: source_data.csv
scripts/: exercise_refactored.py  initial_exercise.py
tests/: conftest.py  e2e_test.py
tests/entities/: test_questionnaire_result.py
tests/handlers/: test_questionnaire_result_handler.py
