[tool.poetry]
name = "promptly-exercise"
version = "0.1.0"
description = ""
authors = ["Ivan Tsarev <mudravr@gmail.com>"]
readme = "README.md"
packages = [{include = "promptly_exercise"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = {extras = ["d"], version = "^22.10.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
